add future weather boxes to index

--- a/index.html
+++ b/index.html
@@ -44,13 +44,51 @@
                         <p>UV index:<span class="current bg-danger rounded py-2 px-2 text-white" id="uv-index"></span></p>
                     </div>
                 </div>
+                <!--Row for future data to be dumped here-->
+                <div class="col-sm-12" id="future-weather">
+                    <h3>5-Day Forecast:</h3>
+                    <div class="row text-light">
+                        <div class="col-sm-2 bg-primary forecast text-white ml-2 mb-3 p-2 mt-2 rounded">
+                            <p id="future-date1"></p>
+                            <p id="future-img1"></p>
+                            <p>Temp:<span id="future-temp1"></span></p>
+                            <p>Humidity:<span id="future-humidity1"></span></p>
+                        </div>
+                        <div class="col-sm-2 bg-primary forecast text-white ml-2 mb-3 p-2 mt-2 rounded">
+                            <p id="future-date2"></p>
+                            <p id="future-img2"></p>
+                            <p>Temp:<span id="future-temp2"></span></p>
+                            <p>Humidity:<span id="future-humidity2"></span></p>
+                        </div>
+                        <div class="col-sm-2 bg-primary forecast text-white ml-2 mb-3 p-2 mt-2 rounded">
+                            <p id="future-date3"></p>
+                            <p id="future-img3"></p>
+                            <p>Temp:<span id="future-temp3"></span></p>
+                            <p>Humidity:<span id="future-humidity3"></span></p>
+                        </div>
+                        <div class="col-sm-2 bg-primary forecast text-white ml-2 mb-3 p-2 mt-2 rounded">
+                            <p id="future-date4"></p>
+                            <p id="future-img4"></p>
+                            <p>Temp:<span id="future-temp4"></span></p>
+                            <p>Humidity:<span id="future-humidity4"></span></p>
+                        </div>
+                        <div class="col-sm-2 bg-primary forecast text-white ml-2 mb-3 p-2 mt-2 rounded">
+                            <p id="future-date5"></p>
+                            <p id="future-img5"></p>
+                            <p>Temp:<span id="future-temp5"></span></p>
+                            <p>Humidity:<span id="future-humidity5"></span></p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 
 
 
-    <script src="https://code.jquery.com/jquery.js"></script>
+    <!--Jquery-->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <!--custon js-->
     <script src="./assets/js/script.js"></script>
 </body>
 
